width set vw to stop overflow being visible on mobile

--- a/index.css
+++ b/index.css
@@ -53,7 +53,7 @@ body {
   font-weight: 700;
   font-size: 1.5rem;
   min-width: 400px;
-  /* min-height: 1000px; */
+  width: 100vw;
   overflow-x: hidden;
   position: relative;
   color: #2c3e50;
